--- a/FRONT/src/components/Slider/slider.scss
+++ b/FRONT/src/components/Slider/slider.scss
@@ -2,24 +2,24 @@
 
 .carousel {
   border-radius: vars.$border-radius-input;
-
 }
 
 .slide {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   justify-content: flex-start;
   position: relative;
 
   &__image {
     object-fit: cover;
-    min-height: 100%;
+    height: 600px;
   }
   
   &__title {
-    font-weight: bold;
-    font-size: 2rem;
-    margin-top: 2rem;
+    // font-weight: bold;
+    font-size: 1.5rem;
+    padding: 1rem;
 
   }
 
